k8s/services/notification-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: ticketing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: colakkemree/ticketing-notification-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3005
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "300m"
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: ticketing
spec:
  selector:
    app: notification-service
  ports:
    - port: 3005
      targetPort: 3005
